complete forgot password logic with verification otp sending

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
+# set up database
 PORT=
 DATABASE_API_KEY=
+
+# jwt virification
 JWT_SECRET_KEY=
 JWT_EXPIRES_IN=
+
+# cloudinary image storing
 CLOUDYNARY_NAME=
 CLOUDYNARY_API_KEY=
 CLOUDYNARY_API_SECRET=
+
+# mail service
+EMAIL_SERVICE=
+EMAIL_SERVICE_PASSWORD=
