config socket.io and connect to client

--- a/.env.example
+++ b/.env.example
@@ -15,5 +15,8 @@ CLOUDYNARY_API_SECRET=
 EMAIL_SERVICE=
 EMAIL_SERVICE_PASSWORD=
 
-# Firebase 
+# firebase 
 FIREBASE_ADMIN_CREDENTIALS=
+
+# set up socket.io
+CLIENT_DOMAIN=
