--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "socket.io": "^4.8.0"
   }
 }
